<resources>
    <string name="app_name">Garmony Book</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_navigation_home">Домой</string>
    <string name="title_navigation_services">Сервисы</string>
    <string name="title_navigation_book">Дневник</string>
    <string name="title_navigation_message">Сообщения</string>
    <string name="title_navigation_note">Запись</string>
    <string name="add_note_text">Добавить заметку</string>
</resources>