<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation10"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.garmonybook.presentation.ui.home.HomeFragment"
        android:label="@string/title_navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.garmonybook.presentation.ui.services.DashboardServices"
        android:label="@string/title_navigation_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.example.garmonybook.presentation.ui.book.Book"
        android:label="@string/title_navigation_book"
        tools:layout="@layout/fragment_book" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.garmonybook.presentation.ui.message.Message"
        android:label="@string/title_navigation_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_add_notes"
        android:name="com.example.garmonybook.presentation.ui.notes.AddNotes"
        android:label="@string/title_navigation_note"
        tools:layout="@layout/fragment_add_notes" />
</navigation>